[package]
name = "speedy-spritesheets"
version = "0.1.0"
edition = "2021"
authors = ["Ian Elsbree <ianelsbree@gmail.com>"]
description = "A simple tool for making animation sprite sheets out of image sequences."
readme = "README.md"
license = "MIT"
repository = "https://github.com/ianelsbree/speedy-spritesheets"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 = "0.36.0"
